test/libsolidity/syntaxTests/abstract/interface.sol
interface B { }
abstract interface A { }
// ----
// TypeError: (16-40): Interfaces do not need the "abstract" keyword, they are abstract implicitly.
